# termgps

./: .gitignore  LICENSE  README.md  pyproject.toml
src/termgps/: __init__.py  app.py  app.py.backup
