[project]
name = "termgps"
version = "1.0.0"
description = "Terminal GPS navigation with radar display - uses real device location"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aditya Giri", email = "your.email@example.com"}
]
keywords = ["gps", "terminal", "navigation", "tui", "radar", "location"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "geocoder>=1.38.0",
]

[project.optional-dependencies]
gps = [
    "pyobjc-framework-CoreLocation>=10.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[project.scripts]
termgps = "termgps.app:run"

[project.urls]
Homepage = "https://github.com/Aditya-Giri-4356/termgps"
Repository = "https://github.com/Aditya-Giri-4356/termgps"
Issues = "https://github.com/Aditya-Giri-4356/termgps/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/termgps"]
