[project]
name = "termgps"
version = "1.1.0"
description = "Cross-platform terminal GPS navigation with radar display"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Aditya Giri"}]
keywords = ["gps", "navigation", "terminal", "tui", "cross-platform"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.scripts]
termgps = "termgps.app:run"

[project.urls]
Repository = "https://github.com/Aditya-Giri-4356/termgps"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/termgps"]

[tool.hatch.build.targets.sdist]
include = ["src/termgps"]
